# panorama

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  Taskfile.yml  config.example.yaml  config.yaml  go.mod  go.sum
.github/workflows/: build.yml
cmd/panorama/: main.go
crates/panorama-asset/: Cargo.toml
crates/panorama-asset/src/: lib.rs  obj.rs
crates/panorama-bridge/: Cargo.toml
crates/panorama-config/: Cargo.toml
crates/panorama-config/src/: lib.rs
crates/panorama-renderer/: Cargo.toml
crates/panorama-renderer/src/: image.rs  lib.rs  rasterizer.rs
crates/panorama-web/: Cargo.toml
crates/panorama-web/src/: lib.rs
crates/panorama-web/src/controller/: maps.rs  mod.rs
crates/panorama-web/src/domain/: maps.rs
crates/panorama-web/src/repo/: maps.rs  mod.rs
crates/panorama-web/src/usecase/: maps.rs
crates/panorama-world/: Cargo.toml
crates/panorama-world/src/: block.rs  lib.rs  sqlite3.rs
frontend/: index.html  package.json  static.go
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: CoordinatesView.vue  LayerSelector.vue  LinkView.vue  ZoomControl.vue
frontend/src/stores/: worldPosition.ts
internal/config/: config.go
internal/game/: game.go  media.go
internal/generator/flat/: renderer.go
internal/generator/isometric/: renderer.go
internal/generator/nn/: neighborhood.go
internal/generator/rasterizer/: rasterizer.go
internal/generator/tile/: downscale.go  next.go  tiler.go
internal/render/: neighborhood.go
internal/render/isometric/: renderer.go
internal/server/: server.go
internal/web/: server.go
internal/web/handlers/: metadata.go
internal/world/: block.go
pkg/imageutil/: png.go
pkg/mesh/: cuboid.go  mesh.go  obj.go
pkg/world/: block.go  block_test.go  meta.go  meta_test.go  world.go
pkg/world/postgres/: postgres.go  postgres_test.go
pkg/world/selector/: selector.go
pkg/world/sqlite3/: sqlite3.go  (+1 more)
src/: main.rs
(+2 files in other folders)
